Optimize event handling and implement modularity for plugins